// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delegates to the underlying codec if length is missing or is not an integer 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "message": "Expected an array, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`delegates to the underlying codec if length is missing or is not an integer 2`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "message": "Expected an array, received an object",
    "path": [],
    "received": "object",
  },
]
`;

exports[`delegates to the underlying codec if length is missing or is not an integer 3`] = `
[
  {
    "code": "invalid_type",
    "expected": "array",
    "message": "Expected an array, received an object",
    "path": [],
    "received": "object",
  },
]
`;

exports[`fails to parse if the length is below the minimum length 1`] = `
[
  {
    "code": "too_short",
    "length": 0,
    "message": "Expected the array to contain at least 1 element(s)",
    "minLength": 1,
    "path": [],
    "type": "array",
  },
]
`;

exports[`fails to parse if the length is below the minimum length 2`] = `
[
  {
    "code": "too_short",
    "length": 0,
    "message": "Expected the string to contain at least 1 character(s)",
    "minLength": 1,
    "path": [],
    "type": "string",
  },
]
`;
